--- a/bulletin-board-app/Jenkinsfile
+++ b/bulletin-board-app/Jenkinsfile
@@ -2,14 +2,14 @@ pipeline {
   agent none
   stages {
     stage('Docker Build') {
-      agent { label 'Jenkins' }
+      agent { label 'Master' }
       steps {
         sh 'sudo docker build -t vikson36/bb-app:${BUILD_NUMBER} ${WORKSPACE}/bulletin-board-app'
       }
     }
 	  
     stage('Docker Push') {
-      agent { label 'Jenkins' }
+      agent { label 'Master' }
       steps {
         sh 'sudo docker push vikson36/bb-app:${BUILD_NUMBER}'
       }
