--- a/bulletin-board-app/Jenkinsfile
+++ b/bulletin-board-app/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     stage('Docker Build') {
       agent { label 'Master' }
       steps {
-        sh 'docker build -t vikson36/bb-app:${BUILD_NUMBER} ${WORKSPACE}/bulletin-board-app'
+        sh 'sudo docker build -t vikson36/bb-app:${BUILD_NUMBER} ${WORKSPACE}/bulletin-board-app'
       }
     }
 	  
