--- a/bulletin-board-app/Jenkinsfile
+++ b/bulletin-board-app/Jenkinsfile
@@ -12,7 +12,7 @@ pipeline {
     stage('Docker Push') {
       agent { label 'Master' }
       steps {
-        sh 'sudo docker push vikson36/bb-app:${BUILD_NUMBER}'
+        sh 'sudo docker push vikson36/bb-app:latest'
       }
     }  
 }
