--- a/bulletin-board-app/Jenkinsfile
+++ b/bulletin-board-app/Jenkinsfile
@@ -24,7 +24,7 @@ pipeline {
     }
 	  
     stage('Docker Stop') {
-      agent { label 'dockerDev' }
+      agent { label 'Master' }
       steps {
 	sh 'sudo chmod 777 ${WORKSPACE}/bulletin-board-app/dockerstop.sh'
         sh ('sudo ${WORKSPACE}/bulletin-board-app/dockerstop.sh')
@@ -32,7 +32,7 @@ pipeline {
     }
 	  
    stage('Docker run') {
-      agent { label 'dockerDev' }
+      agent { label 'Master' }
       steps {
         sh 'sudo docker container run --detach --publish 8080:8080 vikson36/bb-app:latest'
       }
